--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -2,7 +2,7 @@
 layout: slide
 title: "Welcome to our slide deck!"
 ---
-
+Newly Added
 Use the right arrow to begin!
 
 This is now edited By Sushil from PeopleNet
